# calendar-utils

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
calendarstats/: calendarstats.py  config.py  utils.py
calendarutils/: calendarstats.py  config.py  create_oncall_cal_events.py
